19.feb (ws)
      - "add soundfont" must be prepended in the synthesizer font list
      - load soundfont list in the proper order
      - fix #9263: down button in synthesizer causes crash
      - move note heads in edit mode is now undoable
      - fix #9316: double-clicking tied note removes tie
      - fix #9253: line text properties cannot be edited until the text is created
18.feb (ws)
      - make "use native file dialogs" a runtime option selectable in preferences
      - implement simple raster
17.feb (ws)
      - allow drop of Articulations (Fermata) to (end) barlines
      - new meta for footer/header text:
            $f    is replaced by score name
            $F    is replaced by absolute score file path + name
      - add default filename for qt save file dialog
15.feb (ws)
      - implement ST_systemFrameDistance style parameter
      - fix: when removing a measure, dont remove following vbox
      (mi)
      - improved tab<->pitched staff type conversion (to be completed) (r.4017)
14.feb (ws)
      - capella import: instrument names, midi instruments
      - remove QSessionManager from script bindings as its not compatible with
        newest qt
      - new preference settings: MyScoresPath, MyStylesPath, MyTemplatesPath,
        MyPluginsPath, MySoundFontsPath
        used in qt file dialogs
13.feb (ws)
      - add qt file dialogs for score load/save; can be enabled/disabled
        with cmake option NATIVE_FILEDIALOG in toplevel CMakeLists.txt
      (db)
      - copy editing for demo scores (usuariomuse)
09.feb (ws)
      - fix build with precompiled headers: build time is now 2min31sec for debug version
06.feb (lv)
      - MusicXML import fixes: Spanners
03.feb (ws)
      - fix "hide empty staves": mscore restart was needed after unchecking
      - fix #9040: Dragging note horizontally removes accidental permanently
02.feb (lv)
      - MusicXML import fixes: direction placement (not complete yet)
       (la)